testing/errors/forcebit1.a
;ACME 0.96.5
	label+2 = [1, 2, 3]
